# tensorflow

tensorflow/contrib/lite/: CMakeLists.txt  build.py
tensorflow/contrib/lite/cmake/: options.cmake
tensorflow/contrib/lite/cmake/config/: config_armv7l-linux.cmake  config_x86_64-linux.cmake
tensorflow/contrib/lite/cmake/option/: option_armv7l-linux.cmake  option_i686-linux.cmake  option_linux-common.cmake  option_x86_64-linux.cmake
tensorflow/contrib/lite/examples/label_image/: label_image.cc
tensorflow/lite/python/: lite.py
